--- a/OOPblog.html
+++ b/OOPblog.html
@@ -175,12 +175,12 @@
               project. I had no idea I would be adapting the methodology through
               a M.S. Thesis and a publication. Self admittedly, I was guilty of
               separating related data and functions with reuse of similar
-              interrelated functions with quite a bit of interdependency.
-              Learning Full Stack Development has enhanced my use of OOP to
-              improve the clarity and reusability of my code.
+              interrelated functions with some of interdependency. Learning Full
+              Stack Development has enhanced my use of OOP to improve the
+              clarity and reusability of my code.
             </p>
             <p class="lead">
-              OOP takes out the unnecessary interdependency with four major
+              OOP takes out unnecessary interdependency with four major
               principles, Encapsulation, Abstraction, Inheritance and
               Polymorphism.
             </p>
