--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
               <div class="timeline">
                 <!-- Single event -->
                 <div class="timeline-event te-yellow">
-                  <div class="event-date">August 2019 - Present</div>
+                  <div class="event-date">August 2019 - January 2020</div>
                   <div class="event-name">UConn Coding Bootcamp</div>
                   <div class="event-description">University of Connecticut, Stamford, Connecticut</div>
                 </div>
