--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               <p class="lead">Full Stack Developer leveraging published statistical research to build intuitive database
                 structures. Skills in Javascript, CSS, HTML and Python as well as leading projects in a wide variety of
                 professional and academic environments. Currently developing a MERN stack application and learning Java
-                in order to develop a Springboot and React Application. Positioned well to understand database management and analysis
+                in order to develop a Spring Boot and React Application. Positioned well to understand database management and analysis
                 end to end.</p>
               <a href="#portfolio" class="btn btn-black">See my portfolio</a> <a href="#contact"
                 class="btn btn-default">Contact me</a>
