--- a/index.html
+++ b/index.html
@@ -171,45 +171,17 @@
             <div class="resume-box animated slide-in-left appear-second">
               <i class="title-icon text-green flaticon-open79"></i>
               <h3>Skills &amp; Attributes</h3>
+   
               <!-- Sinlge skill -->
               <div class="skill">
-                <span class="skill-name">Functional Programming</span>
-                <div class="skill-bar sb-green">
-                  <div class="skill-rate-on"></div>
-                  <div class="skill-rate-on"></div>
-                  <div class="skill-rate-on"></div>
-                  <div class="skill-rate-on"></div>
-                </div>
+                <span class="skill-name">Web Development</span>
+                <p>JavaScript, Java, ReactJS, Node.JS, MongoDB, Express, Handlebars, HTML, CSS, Google Firebase, GitHub,
+                  Spring-Boot, Docker, Postman, PostgreSQL, Python, and Linux</p>
               </div>
-              <!-- Sinlge skill -->
+                                          <!-- Sinlge skill -->
               <div class="skill">
-                <span class="skill-name">Object Oriented Programming</span>
-                <div class="skill-bar sb-green">
-                  <div class="skill-rate-on"></div>
-                  <div class="skill-rate-on"></div>
-                  <div class="skill-rate-on"></div>
-                  <div class="skill-rate-off"></div>
-                </div>
-              </div>
-              <!-- Sinlge skill -->
-              <div class="skill">
-                <span class="skill-name">HTML/CSS</span>
-                <div class="skill-bar sb-green">
-                  <div class="skill-rate-on"></div>
-                  <div class="skill-rate-on"></div>
-                  <div class="skill-rate-on"></div>
-                  <div class="skill-rate-on"></div>
-                </div>
-              </div>
-              <!-- Sinlge skill -->
-              <div class="skill">
-                <span class="skill-name">JavaScript/jQuery</span>
-                <div class="skill-bar sb-green">
-                  <div class="skill-rate-on"></div>
-                  <div class="skill-rate-on"></div>
-                  <div class="skill-rate-on"></div>
-                  <div class="skill-rate-off"></div>
-                </div>
+                <span class="skill-name">Engineering and Analysis</span>
+                <p>R, MATLAB, LaTeX, C++ and FORTRAN</p>
               </div>
             </div>
 
@@ -347,169 +319,48 @@
 
       <!-- Projects Holder -->
       <div class="projects-holder black dark clearfix">
+
+
         <!-- Single Project -->
-        <div class="single-project animated fade-in">
+        <div class="single-project animated fade-in appear-first">
           <div class="project-image">
-            <img src="images/portfolio/marvel.jpg" alt="" height="700px" width="700px" />
+            <img src="images/NavBkgd.gif" alt="" height="700px" width="700px" />
           </div>
           <div class="project-mask">
             <div class="project-info">
-              <div class="project-title">MARVELize</div>
-              <div class="project-caption text-red">Web desgin / API Calls</div>
-              <div class="project-buttons">
-                <a href="https://alexsamalot19.github.io/teamMarvel/" target="_blank"
-                  class="btn btn-default btn-sm">Online version</a>
-                <a href="https://github.com/alexSamalot19/teamMarvel" target="_blank"
-                  class="btn btn-default btn-sm">GitHub Repository</a></div>
+              <div class="project-title">Back Track</div>
+              <div class="project-caption text-red"> <span>MongoDB / Node / Express / ReactJS</span>
+              <p>Back Track is group activity tracker</p></div>
+              <div class="project-buttons"><a href="https://back-track.herokuapp.com/" target="_blank"
+                class="btn btn-default btn-sm">Online version</a>
+              <a href="https://github.com/alexSamalot19/Back-Track-App" target="_blank"
+                class="btn btn-default btn-sm">GitHub Repository</a>
             </div>
           </div>
         </div>
-        <!-- Single Project -->
-        <div class="single-project animated fade-in appear-second">
-          <div class="project-image">
-            <img src="images/portfolio/train-board.jpg" alt="" height="700px" width="700px" />
-          </div>
-          <div class="project-mask">
-            <div class="project-info">
-              <div class="project-title">Train Tracker</div>
-              <div class="project-caption text-orange">Web desgin / Google Firebase</div>
-              <div class="project-buttons"><a href="https://alexsamalot19.github.io/Train-Scheduler/" target="_blank"
-                  class="btn btn-default btn-sm">Online version</a>
-                <a href="https://github.com/alexSamalot19/Train-Scheduler/" target="_blank"
-                  class="btn btn-default btn-sm">GitHub Repository</a></div>
-            </div>
-          </div>
         </div>
-        <!-- Single Project -->
-        <div class="single-project animated fade-in appear-fourth">
-          <div class="project-image">
-            <img src="images/portfolio/BuzzerBeat.jpg" alt="" height="700px" width="700px" />
-          </div>
-          <div class="project-mask">
-            <div class="project-info">
-              <div class="project-title">Buzzer Beater Trivia</div>
-              <div class="project-caption text-blue">Web desgin / JavaScript</div>
-              <div class="project-buttons"> <a href="https://alexsamalot19.github.io/TriviaGame/" target="_blank"
-                  class="btn btn-default btn-sm">Online version</a>
-                <a href="https://github.com/alexSamalot19/TriviaGame/" target="_blank"
-                  class="btn btn-default btn-sm">GitHub Repository</a></div>
-            </div>
-          </div>
-        </div>
-        <!-- Single Project -->
-        <div class="single-project animated fade-in appear-third">
-          <div class="project-image">
-            <img src="images/portfolio/GifTasticAnim.gif" alt="" height="700px" width="700px" />
-          </div>
-          <div class="project-mask">
-            <div class="project-info">
-              <div class="project-title">GifTastic</div>
-              <div class="project-caption text-green">Web desgin / Web development</div>
-              <div class="project-buttons"><a href="https://alexsamalot19.github.io/GifTastic/" target="_blank"
-                  class="btn btn-default btn-sm">Online version</a>
-                <a href="https://github.com/alexSamalot19/GifTastic/" target="_blank"
-                  class="btn btn-default btn-sm">GitHub Repository</a></div>
-            </div>
-          </div>
-        </div>
-        <!-- Single Project -->
-        <div class="single-project animated fade-in appear-fifth">
-          <div class="project-image">
-            <img src="https://i.imgur.com/ymHWhLS.jpg" alt="" height="700px" width="700px" />
-          </div>
-          <div class="project-mask">
-            <div class="project-info">
-              <div class="project-title">FriendFinder</div>
-              <div class="project-caption text-yellow">Node / Express</div>
-              <div class="project-buttons"><a href="https://friendfinder987.herokuapp.com/" target="_blank"
-                  class="btn btn-default btn-sm">Online version</a>
-                <a href="https://github.com/alexSamalot19/FriendFinder/" target="_blank"
-                  class="btn btn-default btn-sm">GitHub Repository</a></div>
-            </div>
-          </div>
-        </div>
+
+                <!-- Single Project -->
+                <div class="single-project animated fade-in appear-fourth">
+                  <div class="project-image">
+                    <img src="images/320x120_horizontal_ground_logo_white-01.png" alt="" height="700px" width="700px" />
+                  </div>
+                  <div class="project-mask">
+                    <div class="project-info">
+                      <div class="project-title">Groundz</div>
+                      <div class="project-caption text-green"><span>Node / Express / Sequilize</span><p>Groundz is a trip wish list using the National Parks API</p></div>
+                      <div class="project-buttons"><a href="https://the-groundz.herokuapp.com/" target="_blank"
+                          class="btn btn-default btn-sm">Online version</a>
+                        <a href="https://github.com/alexSamalot19/full-stack/" target="_blank"
+                          class="btn btn-default btn-sm">GitHub Repository</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
 
         <!-- Single Project -->
         <div class="single-project animated fade-in appear-sixth">
-          <div class="project-image">
-            <img src="https://media.gq.com/photos/59447d75165c2959e55471d0/master/pass/vegas-best-burgers.gif" alt=""
-              height="700px" width="700px" />
-          </div>
-          <div class="project-mask">
-            <div class="project-info">
-              <div class="project-title">Classic Burgers 2 Different Ways</div>
-              <div class="project-caption text-yellow">Node / Express / Sequilize</div>
-              <div class="project-buttons"><a href="https://alexsamalot19.github.io/DatabaseBurgerStart/"
-                  target="_blank" class="btn btn-default btn-sm">Online version</a>
-                <a href="https://github.com/alexSamalot19/Burger/" target="_blank" class="btn btn-default btn-sm">mySQL
-                  GitHub Repo</a>
-                <a href="https://github.com/alexSamalot19/sequelizedBurger/" target="_blank"
-                  class="btn btn-default btn-sm">Sequelize GitHub Repo</a></div>
-            </div>
-          </div>
-        </div>
-
-
-
-        <!-- Single Project -->
-        <div class="single-project animated fade-in appear-seventh">
-          <div class="project-image">
-            <img src="images/320x120_horizontal_ground_logo_white-01.png" alt="" height="700px" width="700px" />
-          </div>
-          <div class="project-mask">
-            <div class="project-info">
-              <div class="project-title">Groundz</div>
-              <div class="project-caption text-red">Node / Express / Sequilize</div>
-              <div class="project-buttons"><a href="https://the-groundz.herokuapp.com/" target="_blank"
-                  class="btn btn-default btn-sm">Online version</a>
-                <a href="https://github.com/alexSamalot19/full-stack/" target="_blank"
-                  class="btn btn-default btn-sm">GitHub Repository</a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-        <!-- Single Project -->
-        <div class="single-project animated fade-in appear-eighth">
-          <div class="project-image">
-            <img src="https://cdn140.picsart.com/305275885013201.gif?r1024x1024" alt="" height="700px" width="700px" />
-          </div>
-          <div class="project-mask">
-            <div class="project-info">
-              <div class="project-title">News Scraper</div>
-              <div class="project-caption text-red"> Node / Express / Mongo db</div>
-              <div class="project-buttons"><a href=" https://news-scrape9.herokuapp.com/" target="_blank"
-                  class="btn btn-default btn-sm">Online version</a>
-                <a href="https://github.com/alexSamalot19/Mongo-News-Scrape" target="_blank"
-                  class="btn btn-default btn-sm">GitHub Repository</a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-        <!-- Single Project -->
-        <div class="single-project animated fade-in appear-ninth">
-          <div class="project-image">
-            <img src="https://media3.giphy.com/media/24G0F8lQWYMb6jD47X/source.gif" alt="" height="700px"
-              width="700px" />
-          </div>
-          <div class="project-mask">
-            <div class="project-info">
-              <div class="project-title">Click Game</div>
-              <div class="project-caption text-red"> Node / Express / ReactJS</div>
-              <div class="project-buttons"><a href="https://click-game9.herokuapp.com/" target="_blank"
-                  class="btn btn-default btn-sm">Online version</a>
-                <a href="https://github.com/alexSamalot19/Click-Game" target="_blank"
-                  class="btn btn-default btn-sm">GitHub Repository</a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Single Project -->
-        <div class="single-project animated fade-in appear-tenth">
           <div class="project-image">
             <img
               src="https://media3.giphy.com/media/Ghw8BX03RxZM4/giphy.gif?cid=790b7611a5f3144363257b37128217ec70c0adece8d60575&rid=giphy.gif"
@@ -518,7 +369,7 @@
           <div class="project-mask">
             <div class="project-info">
               <div class="project-title">Google React Books</div>
-              <div class="project-caption text-red"> MongoDB / Node / Express / ReactJS</div>
+              <div class="project-caption text-red"> <span>MongoDB / Node / Express / ReactJS</span><p>Google React Books is a reading list application</p></div>
               <div class="project-buttons"><a href="https://google-react-b00k.herokuapp.com/" target="_blank"
                   class="btn btn-default btn-sm">Online version</a>
                 <a href="https://github.com/alexSamalot19/Google-Books-React" target="_blank"
@@ -528,34 +379,60 @@
           </div>
         </div>
 
+
         <!-- Single Project -->
-        <div class="single-project animated fade-in appear-eleventh">
+        <div class="single-project animated fade-in appear-third">
           <div class="project-image">
-            <img src="images/NavBkgd.gif" alt="" height="700px" width="700px" />
+            <img src="images/portfolio/marvel.jpg" alt="" height="700px" width="700px" />
           </div>
           <div class="project-mask">
             <div class="project-info">
-              <div class="project-title">Back Track</div>
-              <div class="project-caption text-red"> MongoDB / Node / Express / ReactJS</div>
-              <h3>Under Construction</h3>
-              <!-- <div class="project-buttons"><a href="https://google-react-b00k.herokuapp.com/" target="_blank"
-                                          class="btn btn-default btn-sm">Online version</a> -->
-              <a href="https://github.com/alexSamalot19/Back-Track-App" target="_blank"
-                class="btn btn-default btn-sm">GitHub Repository</a>
+              <div class="project-title">MARVELize</div>
+              <div class="project-caption text-blue"><span>Web desgin / API Calls</span><p>Marvelize is a search portal for commic book and movie information</p></div>
+              <div class="project-buttons">
+                <a href="https://alexsamalot19.github.io/teamMarvel/" target="_blank"
+                  class="btn btn-default btn-sm">Online version</a>
+                <a href="https://github.com/alexSamalot19/teamMarvel" target="_blank"
+                  class="btn btn-default btn-sm">GitHub Repository</a></div>
             </div>
           </div>
         </div>
 
 
+
+
+
+
         <!-- Single Project -->
-        <div class="single-project animated fade-in appear-twelfth">
+        <div class="single-project animated fade-in appear-fifth">
+          <div class="project-image">
+            <img src="https://media3.giphy.com/media/24G0F8lQWYMb6jD47X/source.gif" alt="" height="700px"
+              width="700px" />
+          </div>
+          <div class="project-mask">
+            <div class="project-info">
+              <div class="project-title">NBA Memory Click</div>
+              <div class="project-caption text-red"><span>Node / Express / ReactJS</span><p>NBA Memory Click is a game designed to test the memory of the user using popular NBA Teams</p></div>
+              <div class="project-buttons"><a href="https://click-game9.herokuapp.com/" target="_blank"
+                  class="btn btn-default btn-sm">Online version</a>
+                <a href="https://github.com/alexSamalot19/Click-Game" target="_blank"
+                  class="btn btn-default btn-sm">GitHub Repository</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+        <!-- Single Project -->
+        <div class="single-project animated fade-in appear-second">
           <div class="project-image">
             <img src="images/springReact.jpg" alt="" height="700px" width="700px" />
           </div>
           <div class="project-mask">
             <div class="project-info">
               <div class="project-title">Admin App</div>
-              <div class="project-caption text-red"> Java / Spring Boot / JavaScript / ReactJS</div>
+              <div class="project-caption text-blue"><span>Java / Spring Boot / JavaScript / ReactJS</span><p>Admin App manages a database of students with a Java back end</p></div>
 
               <!-- <div class="project-buttons"><a href="https://google-react-b00k.herokuapp.com/" target="_blank"
                                           class="btn btn-default btn-sm">Online version</a> -->
@@ -565,6 +442,8 @@
           </div>
         </div>
 
+
+        </div>
         <!-- Ajax Project Details -->
         <div class="project-content"></div>
 
