--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
         <!-- Single Project -->
         <div class="single-project animated fade-in appear-first">
           <div class="project-image">
-            <img src="images/NavBkgd.gif" alt="" height="700px" width="700px" />
+            <img src="https://media.giphy.com/media/neYZeGjHnzhkI/giphy.gif" alt="" height="700px" width="700px" />
           </div>
           <div class="project-mask">
             <div class="project-info">
@@ -343,7 +343,7 @@
                 <!-- Single Project -->
                 <div class="single-project animated fade-in appear-fourth">
                   <div class="project-image">
-                    <img src="images/320x120_horizontal_ground_logo_white-01.png" alt="" height="700px" width="700px" />
+                    <img src="https://i.imgur.com/ffFfMTV.gif" alt="" height="700px" width="700px" />
                   </div>
                   <div class="project-mask">
                     <div class="project-info">
