updated brand statement

--- a/index.html
+++ b/index.html
@@ -158,11 +158,12 @@
             <div class="resume-box animated slide-in-top">
               <i class="title-icon text-blue flaticon-speech43"></i>
               <h3>Who am I?</h3>
-              <p class="lead">Full Stack Developer leveraging published statistical research to build intuitive database
-                structures. Skills in Javascript, CSS, HTML and Python as well as leading projects in a wide variety of
-                professional and academic environments. Currently developing a MERN stack application in addition to a Spring Boot and React Application. 
-               Positioned well to understand database management and analysis
-                end to end.</p>
+              <p class="lead">Full Stack Developer leveraging published statistical research to build intuitive database structures. 
+                Skills in Javascript, CSS, HTML, and Python as well as leading projects in a wide variety of professional and academic environments. 
+                Passionate about developing solutions to complex problems in diverse teams. 
+                Positioned well to understand database management and analysis end to end. 
+                Developed Full Stack  ReactJS applications using a MERN stack and Spring Boot. 
+                Certificate in Full Stack Web Development from University of Connecticut.</p>
               <a href="#portfolio" class="btn btn-black">See my portfolio</a> <a href="#contact"
                 class="btn btn-default">Contact me</a>
             </div>
