--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                       <div class="project-caption text-green"><span>Node / Express / Sequilize</span><p>Groundz is a trip wish list using the National Parks API</p></div>
                       <div class="project-buttons"><a href="https://the-groundz.herokuapp.com/" target="_blank"
                           class="btn btn-default btn-sm">Online version</a>
-                        <a href="https://github.com/alexSamalot19/full-stack/" target="_blank"
+                        <a href="https://github.com/alexSamalot19/Groundz" target="_blank"
                           class="btn btn-default btn-sm">GitHub Repository</a>
                       </div>
                     </div>
@@ -369,8 +369,8 @@
           </div>
           <div class="project-mask">
             <div class="project-info">
-              <div class="project-title">Google React Books</div>
-              <div class="project-caption text-red"> <span>MongoDB / Node / Express / ReactJS</span><p>Google React Books is a reading list application</p></div>
+              <div class="project-title">Google Books React</div>
+              <div class="project-caption text-red"> <span>MongoDB / Node / Express / ReactJS</span><p>Google Books React is a reading list application</p></div>
               <div class="project-buttons"><a href="https://google-react-b00k.herokuapp.com/" target="_blank"
                   class="btn btn-default btn-sm">Online version</a>
                 <a href="https://github.com/alexSamalot19/Google-Books-React" target="_blank"
@@ -414,9 +414,9 @@
             <div class="project-info">
               <div class="project-title">NBA Memory Click</div>
               <div class="project-caption text-red"><span>Node / Express / ReactJS</span><p>NBA Memory Click is a game designed to test the memory of the user using popular NBA Teams</p></div>
-              <div class="project-buttons"><a href="https://click-game9.herokuapp.com/" target="_blank"
+              <div class="project-buttons"><a href="https://nba-click-game9.herokuapp.com/" target="_blank"
                   class="btn btn-default btn-sm">Online version</a>
-                <a href="https://github.com/alexSamalot19/Click-Game" target="_blank"
+                <a href="https://github.com/alexSamalot19/NBA-Memory-Click" target="_blank"
                   class="btn btn-default btn-sm">GitHub Repository</a>
               </div>
             </div>
@@ -426,22 +426,22 @@
 
 
         <!-- Single Project -->
-        <div class="single-project animated fade-in appear-second">
-          <div class="project-image">
-            <img src="images/springReact.jpg" alt="" height="700px" width="700px" />
-          </div>
-          <div class="project-mask">
-            <div class="project-info">
-              <div class="project-title">Admin App</div>
-              <div class="project-caption text-blue"><span>Java / Spring Boot / JavaScript / ReactJS</span><p>Admin App manages a database of students with a Java back end</p></div>
+        <!-- <div class="single-project animated fade-in appear-second"> -->
+          <!-- <div class="project-image"> -->
+            <!-- <img src="images/springReact.jpg" alt="" height="700px" width="700px" /> -->
+          <!-- </div> -->
+          <!-- <div class="project-mask"> -->
+            <!-- <div class="project-info"> -->
+              <!-- <div class="project-title">Admin App</div> -->
+              <!-- <div class="project-caption text-blue"><span>Java / Spring Boot / JavaScript / ReactJS</span><p>Admin App manages a database of students with a Java back end</p></div> -->
 
               <!-- <div class="project-buttons"><a href="https://google-react-b00k.herokuapp.com/" target="_blank"
                                           class="btn btn-default btn-sm">Online version</a> -->
-              <a href="https://github.com/alexSamalot19/SpringJavaAdminApp" target="_blank"
-                class="btn btn-default btn-sm">GitHub Repository</a>
-            </div>
-          </div>
-        </div>
+              <!-- <a href="https://github.com/alexSamalot19/SpringJavaAdminApp" target="_blank" -->
+                <!-- class="btn btn-default btn-sm">GitHub Repository</a> -->
+            <!-- </div> -->
+          <!-- </div> -->
+        <!-- </div> -->
 
 
         </div>
